[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "requests>=2.28.2",
    "pandas>=1.5.3",
    "numpy>=1.24.2",
    "nltk>=3.8.1",
    "scikit-learn>=1.2.1",
    "tqdm>=4.64.1",
    "scipy>=1.9.3",
    "transformers>=4.26.1",
    "matplotlib>=3.7.0",
    "torch>=1.13.1",
    "gensim>=4.3.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
